# iota_medai

./: README.md
MEDAI/: .gitignore  LICENSE  README.md  package-lock.json
MEDAI/GUARDIAN/: App.js  app.json  babel.config.js  metro.config.js  package.json
MEDAI/GUARDIAN/screens/: AddAmbulanceScreen.js  AddHealthcareRecordScreen.js  AmbulanceManagementScreen.js  ConnectedPatientsScreen.js  DoctorDashboard.js  DoctorLoginScreen.js  EmergencyReportScreen.js  EmergencyStatusScreen.js  HealthcareListScreen.js  HospitalDashboardScreen.js  HospitalDetailsScreen.js  HospitalHomeScreen.js  HospitalListScreen.js  HospitalLoginScreen.js  HospitalRegisterScreen.js  MainApp.js  MedicationReminderScreen.js  MedicineListScreen.js  OrganDonorRegistryScreen.js  PatientDashboardScreen.js  PharmacyDashboardScreen.js  PharmacyLoginScreen.js  ProfileScreen.js  RegisterMedicineScreen.js  SafeZoneSettingsScreen.js  SignInScreen.js  SignUpScreen.js  VerifyMedicineScreen.js  VoiceTextNoteScreen.js
MEDAI/GUARDIAN/services/: blockchainService.js
MEDAI/MEDAI APP/: App.js  app.json  babel.config.js  config.js  convert-icons.sh  convert-images.py  create-assets.sh  package-lock.json  package.json
MEDAI/MEDAI APP/components/: MedicineVerificationWorkflow.js  TextInput.js
MEDAI/MEDAI APP/constants/: theme.js
MEDAI/MEDAI APP/navigation/: DynamicBottomTabNavigator.js  PregnancyBottomTabNavigator.js  SmartBottomTabNavigator.js
MEDAI/MEDAI APP/screens/: LoginScreen.js
MEDAI/MEDAI APP/services/: ChatbotService.js  FallDetectionService.js  HealthcareService.js  LocationService.js  MedicineService.js  NotificationService.js  OCRService.js  OrganService.js  SpatialAwareness.js  marketplaceService.js  walletService.js
MEDAI/MEDAI APP/utils/: PermissionsHelper.js
MEDAI/ML SCRIPTS/: diet_recommendation.py  medical_diagnosis.py  medical_ocr.py  nearest_neightbor_search.py  services.py  yoga_pose_detection.py
MEDAI/medai-server/: app.py  requirements.txt
MEDAI/medai-server/ai/: AdvancedYogaPoseEstimator.py  chatbot.py  fall_detection.py  grok_vision.py  ocr.py  simple_yoga_estimator.py  yoga_pose_estimation.py
iota/iota-health-record/: Cargo.toml
iota/iota-health-record/src/: iota_healthcare_fetch.rs  iota_healthcare_submit.rs  iota_healthcare_update.rs
iota/iota-medicine-auth/: Cargo.toml
iota/iota-medicine-auth/src/: iota_medicine_activate.rs  iota_medicine_fetch.rs  iota_medicine_submit.rs
iota/iota-organ-donor/: Cargo.toml
iota/iota-organ-donor-app/: App.js  app.json  config.js  index.js  package-lock.json  package.json
iota/iota-organ-donor-app/components/: HospitalDashboard.js
iota/iota-organ-donor-app/screens/: AddDonorScreen.js  AddFundsScreen.js  AddHealthcareRecordScreen.js  AddServiceScreen.js  BookingConfirmationScreen.js  EmergencyDetailsScreen.js  HealthcareHomeScreen.js  HealthcareListScreen.js  HomeScreen.js  HospitalHomeScreen.js  MarketplaceScreen.js  MedicineHomeScreen.js  MedicineListScreen.js  MyBookingsScreen.js  MyServicesScreen.js  RateServiceScreen.js  (+8 more)
iota/iota-organ-donor/src/: iota_fetch.rs  iota_submit.rs
iota/iota_emergency/: Cargo.toml
iota/iota_emergency/src/: iota_ambulance_register.rs  iota_emergency_service.rs  iota_hospital_register.rs
iota/iota_marketplace/: Cargo.toml
iota/iota_marketplace/src/: iota_faucet_request.rs  iota_marketplace_payment.rs  iota_marketplace_submit.rs  iota_service_fetch.rs  iota_service_register.rs  iota_service_verify.rs  iota_transfer.rs  iota_wallet.rs
iota/server/: .env  apiService.js  auth-routes.js  blockchain_ambulances.json  blockchain_emergencies.json  blockchain_hospitals.json  blockchain_services.json  config.js  faucetService.js  healthcare-routes.js  healthcare_records.json  hospitalRoutes.js  iota_ambulance_register  iota_emergency_service  iota_hospital_register  iota_marketplace_fetch  iota_marketplace_payment  iota_marketplace_submit  iota_service_fetch  iota_service_register  iota_service_verify  lockManager.js  marketplace-routes.js  marketplace_bookings.json  medicine-routes.js  medicine_records.json  nodemon.json  organ_records.json  package-lock.json  package.json  server.js  tokenUtils.js  wallet-routes.js  walletManager.js  walletService.js
(+63 files in other folders)
