[package]
name = "iota_donor_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iota_submit"
path = "src/iota_submit.rs"

[[bin]]
name = "iota_fetch"
path = "src/iota_fetch.rs"

[dependencies]
anyhow = "1.0"
iota-client = "2.0.1-rc.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
hex = "0.4.3"  # Added for hex encoding/decoding