[package]
name = "iota-marketplace"
version = "0.1.0"
edition = "2021"
authors = ["Healthcare Blockchain Team"]
description = "IOTA-based marketplace for healthcare services"

[dependencies]
dotenv = "0.15"
iota-client = "2.0.1-rc.7"
iota-wallet = "1.0.0-rc.6"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
reqwest = { version = "0.11", features = ["json"] } # Added for faucet HTTP requests
chrono = "0.4" # Added for timestamp generation



[[bin]]
name = "iota_ambulance_register"
path = "src/iota_ambulance_register.rs"

[[bin]]
name = "iota_emergency_service"
path = "src/iota_emergency_service.rs"

[[bin]]
name = "iota_hospital_register"
path = "src/iota_hospital_register.rs"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
